--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat; 
     background-size: cover; 
     color: aliceblue;
+    position: relative;
 }
 
 #train-table th,
@@ -14,7 +15,10 @@
       width: 16.575%;
     }
 
-h3 {
+h2 {
     font-family: fantasy;
-    text-align: right;
+    position: absolute;
+    bottom: 0%;
+    right: 5%;
+    
 }
